<resources>
    <string name="app_name">BudgetPlanner</string>

    <!--    Splash Screen-->
    <string name="get_started">GET STARTED</string>

    <string name="title_financial_monitoring">Financial monitoring</string>
    <string name="subtitle_financial_monitoring">Keep your incomes and expenses on track</string>

    <string name="title_expenses_category">Expenses category</string>
    <string name="subtitle_expenses_category">Category make it easier to track and monitor your spending</string>

    <string name="title_saving_goal">Saving goal</string>
    <string name="subtitle_saving_goal">Set your first saving goal and track the savings progress</string>

    <string name="title_budget_control">Budget control</string>
    <string name="subtitle_budget_control">Add a budget to control your spending</string>

    <!--   Add Account-->
    <string name="title_add_account">Add Account</string>
    <string name="subtitle_add_account">Choose a name for your account.</string>
    <string name="btn_next">NEXT</string>
    <string name="hint_name">Name</string>

    <!--    Select currency-->
    <string name="title_select_currency">Select Currency</string>
    <string name="subtitle_select_currency">What is your favourite currency?</string>
    <string name="title_search">Search</string>
    <string name="hint_search">Search...</string>

    <!--    Initial Amount-->
    <string name="title_initial_amount">Initial Amount</string>
    <string name="subtitle_initial_amount">How much money do you have in your cash wallet?</string>

    <!--    Main Screen -->
    <string name="transaction">Transaction</string>
    <string name="calendar">Calendar</string>
    <string name="statistic">Statistic</string>
    <string name="wallet">Wallet</string>
    <string name="title_select_account">Select account</string>
    <string name="title_exit_app">Exit App</string>
    <string name="body_exit_app">Do you want to exit an App?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <!--    Currencies-->
    <string name="dollar_desc">United States Dollar</string>
    <string name="sum_desc">Uzbekistan Sum</string>
    <string name="rouble_desc">Russian Rouble</string>

    <!--    Transaction-->
    <string name="item_pro">Premium</string>
    <string name="item_list">List</string>
    <string name="balance">Balance</string>
    <string name="no_record">No Record</string>
    <string name="empty_list_desc">Tap the + button to add your first record</string>
    <string name="add_button">add button</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="save">Save</string>

    <!--    Add Transaction-->
    <string name="title_date">Date</string>
    <string name="title_amount">Amount</string>
    <string name="title_description">Description</string>
    <string name="hint_description">Short description</string>
    <string name="select_category">Select category</string>
    <string name="title_date_picker">Select date</string>
    <string name="title_time_picker">Select time</string>
    <string name="transaction_data_invalid">The entered data is incorrect!</string>

    <!--    Category-->
    <string name="title_category">Category</string>
    <string name="title_select_category">Select Category</string>
    <string name="menu_item_add_category">Add Category</string>
    <string name="category_name">Category\'s name</string>
    <string name="color">Color</string>
    <string name="icon">Icon</string>
    <string name="desc_save_category">Tips: Pick different colour for each categories allow you to easily identify the category by the colour</string>
    <string name="done">DONE</string>
    <string name="pick_icon">Pick Icon</string>
    <string name="item_menu_settings">Settings</string>
    <string name="manage_category">Manage Category</string>

    <!--    Default Categories -->
    <string name="default_category_bills">Bills</string>
    <string name="default_category_clothing">Clothing</string>
    <string name="default_category_education">Education</string>
    <string name="default_category_food">Food</string>
    <string name="default_category_allowance">Allowance</string>
    <string name="default_category_award">Award</string>
    <string name="default_category_salary">Salary</string>

    <!--    Transaction details-->
    <string name="title_record">Record</string>
    <string name="item_menu_edit">Edit</string>
    <string name="item_menu_delete">Delete</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="message_delete_transaction_dialog">Do you really want to delete this transaction?</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="title_tag_color">Tag color</string>

    <!--    Manage category-->
    <string name="message_delete_category_dialog">Do you really want to remove this expense category?</string>

    <!--    Expense Category-->
    <string name="toolbar_expense">Expense Category</string>
    <string name="category_data_is_invalid">The category information was entered incorrectly</string>
    <string name="manage">Manage</string>

    <string name="default_wallet_name">Cash</string>
    <string name="wallet_name_hint">Wallet`s name</string>

    <!--    days of the week-->
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
</resources>