<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.main.MainActivity">

    <LinearLayout style="@style/layoutStyle">

        <LinearLayout
            android:id="@+id/ll_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:paddingTop="15dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/textStyle.700"
                android:paddingVertical="10dp"
                android:text="@string/transaction"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_account_amount"
                style="@style/textStyle.500"
                android:drawablePadding="10dp"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_wallet"
                tools:text="Balance: 500"
                tools:textColor="@color/red" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_transaction"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/ll_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/image_list"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/textStyle.700"
                android:layout_marginTop="12dp"
                android:text="@string/no_record"
                android:textSize="24sp" />

            <TextView
                style="@style/textStyle.500"
                android:layout_marginTop="12dp"
                android:text="@string/empty_list_desc"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_add_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        app:srcCompat="@drawable/ic_plus"
        tools:ignore="ContentDescription" />

</FrameLayout>