<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layoutStyle"
    tools:context=".ui.screens.transaction.details.DetailsTransactionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarStyle"
        app:menu="@menu/menu_transaction_details"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/title_record" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_bills"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_category"
                    style="@style/textStyle.500"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    tools:text="Gifts" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textStyle.500"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_amount" />

                    <TextView
                        style="@style/textStyle.500"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_date" />

                    <TextView
                        style="@style/textStyle.500"
                        android:layout_marginTop="20dp"
                        android:text="@string/description" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_amount"
                        style="@style/textStyle.500"
                        android:layout_marginTop="20dp"
                        tools:text="-500 USD"
                        tools:textColor="@color/red" />

                    <TextView
                        android:id="@+id/tv_date"
                        style="@style/textStyle.500"
                        android:layout_marginTop="20dp"
                        tools:text="07/28/2023 4:47 PM" />

                    <TextView
                        android:id="@+id/tv_description"
                        style="@style/textStyle.500"
                        android:layout_marginTop="20dp"
                        tools:text="Bir nima balo battar" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>